# sequin

./: Cargo.toml  NOTES.md  README.md  SOLVED.md  TEST_CASES.md  TODO.md  UNSOLVED.md  sequences.txt  test_cases.txt
src/: main.rs  util.rs
src/archive/: sequence.rs  zipped.rs
src/seq/: binom.rs  mod.rs  sequence.rs  zipped.rs
src/sequence/: alternator.rs  binom.rs  difference.rs  differences.rs  factor.rs  fibonacci.rs  geometric.rs  linear.rs  mod.rs  oeis.rs  once_diff.rs  once_factor.rs  prevbinom.rs  sequence.rs  zipped.rs
