[package]
name = "sequin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fraction = "0.13.1"
itertools = "0.10.5"
ureq = { version = "2.2.0", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }